package interfaces;

import logic.compute.ProcessUnit;

public interface Computable {
    public double compute(ProcessUnit processUnit);
}
