package interfaces;

public interface Duplicatable {
    public void duplicateTask(int taskNumber);
}
