package interfaces;

import logic.compute.ProcessUnit;

public interface Parallelizable {
    public double parallelCompute(ProcessUnit processUnit);
}
